--- a/ChatBotWeb/Properties/launchSettings.json
+++ b/ChatBotWeb/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:60426",
-      "sslPort": 44391
+      "applicationUrl": "http://localhost:24115",
+      "sslPort": 44335
     }
   },
   "profiles": {
-    "ChatBot": {
+    "ChatBotWeb": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7276;http://localhost:5276",
+      "applicationUrl": "https://localhost:7107;http://localhost:5107",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
