--- a/ChatBotWeb/ChatBotWeb.csproj
+++ b/ChatBotWeb/ChatBotWeb.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise.Bootstrap" Version="1.1.1" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.1.1" />
     <PackageReference Include="Radzen.Blazor" Version="4.1.9" />
   </ItemGroup>
 
